@@ -69,6 +69,7 @@
   def (transparent_all)
 #endif
 #if ENABLE_FRILLS
+  def (transient_for)
   def (pty_fd)
   def (hold)
   def (ext_bwidth)
